// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ValueButton /> should handle click event 1`] = `
<button
  aria-checked={false}
  className="sg-77e381-inactive"
  data-test-id="someid"
  onClick={
    [MockFunction] {
      "calls": [
        [],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  role="checkbox"
  type="button"
  value="someid"
>
  somelabel
</button>
`;

exports[`<ValueButton /> should render as active 1`] = `
<button
  aria-checked={true}
  className="sg-h4u6fa-active"
  data-test-id="someid"
  onClick={[Function]}
  role="checkbox"
  type="button"
  value="someid"
>
  somelabel
</button>
`;

exports[`<ValueButton /> should render as inactive 1`] = `
<button
  aria-checked={false}
  className="sg-77e381-inactive"
  data-test-id="someid"
  onClick={[Function]}
  role="checkbox"
  type="button"
  value="someid"
>
  somelabel
</button>
`;
